# ml-pipes

./: .dockerignore  .gitignore  01TrainClassification.py  01run_classification_experiment.py  02RunClassificationModelAPI.py  02deploy_classification_experiment.py  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
example-model-development/: ModelAPI.py  RunExperiment.ipynb  settings.py
ml-pipes/: ModelApi.py  docker-compose.yml
ml_pipes/: classification.py
src/: 01RunExperiment.py  DeployModel.sh  ModelAPI.py  RunExperiment.ipynb  RunExperiment.py  model_api.py  settings.py
src/dao/: CreditCardDefault.py
src/trainers/: h2o_automl.py  prediction.py  pycaret.py  pyspark.py  spark.py
tests/: test_ml_pipes.py
