[tool.poetry]
name = "ml-pipes"
version = "0.1.0"
description = ""
authors = ["viniciusmsousa <vinisousa04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
mlflow = "^1.15.0"
h2o = "^3.32.1"
matplotlib = "^3.4.1"
loguru = "^0.5.3"
typeguard = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.3.0"
ipykernel = "^5.5.3"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
