[tool.poetry]
name = "ml-pipes"
version = "0.1.0"
description = ""
authors = ["viniciusmsousa <vinisousa04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
pandas = "^1.2.3"
mlflow = "^1.15.0"
h2o = "^3.32.1"
matplotlib = "^3.4.1"
loguru = "^0.5.3"
typeguard = "^2.12.0"
pycaret = "^2.3.0"
fastapi = {extras = ["all"], version = "^0.63.0"}
pyspark = "^3.1.1"
pyarrow = "^4.0.0"
ds-toolbox = {git = "https://github.com/viniciusmsousa/ds-toolbox.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.3.0"
bandit = "^1.7.0"
jupyter = "^1.0.0"
pylint = "^2.8.2"
flake8 = "^3.9.1"
mypy = "^0.812"
ipython = "^7.23.1"
ipykernel = "^5.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
